--- a/pyproject.toml
+++ b/pyproject.toml
@@ -16,6 +16,7 @@ dependencies = [
   "numpy>=1.24,<3",   # looser & future-safe
   "pillow>=9",
   "tqdm>=4.66",
+  "requests",
 ]
 
 [project.scripts]
